ensure display body overflow is hidden

--- a/media/main.css
+++ b/media/main.css
@@ -7,6 +7,7 @@
   align-items: center;
   min-height: 20vh;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .displays-wrapper {
